psp/0_deploy.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: debug-service
spec: 
  selector: 
    app: debug
  ports:
    - protocol: TCP
      port: 22 
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: debug
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: debug
  template:
    metadata:
      labels: 
        app: debug
    spec:
      containers:
      - name: debug
        image: shawnho1976/library:debug-container
        volumeMounts:
        - name: bad
          mountPath: /bad
        command:
        - /bin/bash
        args:
        - -c
        - sleep 6000
      hostNetwork: true     
      nodeSelector:
        type: master
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: "Exists"
        effect: "NoSchedule"
      volumes:
      - name: bad
        hostPath:
          path: /etc/kubernetes/manifests
          type: Directory
