psp/1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-external
  namespace: default
spec:
  types:
    - Ingress
    - Egress
  egress:    
    - action: Allow
